force-app/main/default/objects/Haravan_Product__c/Haravan_Product__c.object-meta.xml
<CustomObject>
    <label>Retail Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>