force-app/main/default/objects/Haravan_Product__c/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>