force-app/main/default/objects/Haravan_Product__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <label>Display</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Hararetail</fullName>
            </value>
            <value>
                <fullName>Harasocial</fullName>
            </value>
            <value>
                <fullName>Tiki.vn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>