force-app/main/default/objects/Haravan_Product__c/fields/Images_Text__c.field-meta.xml
<CustomField>
    <fullName>Images_Text__c</fullName>
    <label>Images Text</label>
    <type>TextArea</type>
</CustomField>