force-app/main/default/objects/Haravan_Product__c/fields/PromotionProduct__c.field-meta.xml
<CustomField>
    <fullName>PromotionProduct__c</fullName>
    <formula>IF(promotionproducttext__c = &apos;true&apos;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Product</label>
    <type>Checkbox</type>
</CustomField>