force-app/main/default/objects/Haravan_Product__c/fields/promotionproducttext__c.field-meta.xml
<CustomField>
    <fullName>promotionproducttext__c</fullName>
    <label>Promotion Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>