force-app/main/default/objects/Haravan_Product__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>